--- a/WuWaOverlay-win32-x64/resources/app/package.json
+++ b/WuWaOverlay-win32-x64/resources/app/package.json
@@ -3,10 +3,21 @@
     "version": "1.0.0",
     "main": "main.js",
     "scripts": {
-      "start": "electron ."
+        "start": "electron .",
+        "start:admin": "cross-env FORCE_ELEVATION=1 electron .",
+        "rebuild:native": "npx @electron/rebuild -f -w uiohook-napi",
+        "postinstall": "npm run rebuild:native",
+        "clean:dist": "node -e \"require('fs').rmSync('WuWaOverlay-win32-x64',{recursive:true,force:true})\"",
+        "pack": "npm run clean:dist && electron-packager . WuWaOverlay --platform=win32 --arch=x64 --out=. --overwrite --icon=icon.ico --ignore=/WuWaOverlay-win32-x64 --prune=false"
     },
     "devDependencies": {
-      "electron": "^26.2.0"
+        "@electron/packager": "^18.4.4",
+        "electron": "^26.2.0"
+    },
+    "dependencies": {
+        "cross-env": "^10.0.0",
+        "is-elevated": "^4.0.0",
+        "sudo-prompt": "^9.2.1",
+        "uiohook-napi": "^1.5.4"
     }
-  }
-  
+}
